--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sample Project Using GIT</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+  <img src="./logo.png" alt="A logo">
   <h1>A sample project using GIT</h1>
   <p>Because basics are really important!</p>
 </body>
