--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <img src="./logo.png" alt="A logo">
-  <h1>A sample project using GIT</h1>
+  <h1>How to use GIT?</h1>
   <p>Because basics are really important!</p>
 </body>
 </html>
